# latest-sender

./: .pre-commit-config.yaml  .releaserc.json  CLAUDE.md  Cargo.toml  README.md  config.example.toml  setup-hooks.sh
.github/workflows/: rust.yml
src/: config.rs  discord_sender.rs  file_finder.rs  lib.rs  main.rs
