[package]
name = "latest-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
glob = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["multipart", "blocking"] }
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
humantime = "2.1"

[dev-dependencies]
tempfile = "3.10"
mockito = "1.5"
